assets/css/style.css
/* Google fonts: https://webflow.com/blog/google-fonts */
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: 'Roboto', sans-serif;
    color: #201E20;
    font-size: 1rem;
}

/* Content wrapper */
html, body {
    height: 100%;
    margin: 0;
}

.content-wrapper {
    flex: 1;
}


/* Header */
header {
    background-color: #FFFFFF;
    padding: 0 1rem;
    position: fixed;
    z-index: 1000;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
    height: 3.7rem;
    /*  Stick at the top */
    top: 0;
    transition: all 0.3s ease;
}

header a {
    text-decoration: none;
    color: inherit;
}

h1 {
    font-family: 'Open Sans', sans-serif;
    text-transform: uppercase;
    letter-spacing: 1px;
    color: #201E20;
    margin-bottom: 1rem;
}

/* Red first word */
.red-first-word {
    /* Red cherry */
    color: #990011;
}

/* Paragraph */
p {
    padding: 2rem 0;
    color: #333;
}

h1,
h2,
p {
    font-size: 1.5rem;
}

/* Menu */
#menu {
    font-size: large;
    letter-spacing: 2px;
    list-style-type: none;
}

#menu>li {
    margin-bottom: 0.5rem;
}

.active {
    border-bottom: 1px solid #201E20;
}

/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: #FFFFFF;
    width: 35%;
    right: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
    display: none;
    top: 4rem;
    transition: all 0.3s ease;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

nav.transparent {
    background-color: transparent;
    box-shadow: none;
}

/* Main content */
main {
    flex-grow: 1;
    margin-top: 4rem;
    padding: 1rem;
}

/* Hero */
#hero {
    height: 600px;
    width: 100%;
    background: url("../images/background/tausendlin.jpeg") no-repeat center center/cover;
    padding-top: 1.2rem;
}

.typing_container {
    width: 600px;
    /* Adjust as needed */
    white-space: nowrap;
    /* Keeps the content on a single line */
    overflow: hidden;
    /* Hide the content that overflows the container's width */
    border-right: 3px solid;
    /* The cursor effect */
    font-family: monospace;
    /* Typical font for typing effects */
    font-size: 20px;
    /* Adjust as needed */
    max-height: 800px;
}

/* The typing effect */
@keyframes typing {
    from {
        width: 0;
    }

    to {
        width: 100%;
    }
}

/* The cursor effect */
@keyframes cursorBlink {
    50% {
        border-color: transparent;
    }
}

/* Apply the animations to the container */
.typing {
    /* Animation duration should match the typing steps */
    animation: typing 5s steps(10, end) forwards,
    /* Add a delay to the cursor blink animation and limit iterations */
    cursorBlink .75s step-end 1s 5;         
}

.section_text {
    width: 90%;
    margin: 1rem auto;
}

.title {
    font-size: 280%;
    margin-bottom: 0.5rem;
}

#subtitle {
    font-size: 180%;
}

img {
    max-width: 100%;
    height: auto;
}

/* Slideshow https://www.w3schools.com/howto/howto_js_image_grid.asp*/
.slideshow-container {
    width: 80%;
    height: 500px;
    position: relative;
    overflow: hidden;
    display: block;
    margin-left: auto;
    margin-right: auto;

}

/* default image */
.myslides {
    width: 100%;
    height: 100%;
    object-fit: cover;
    color: #000;
}

.myslides img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

/* Next & previous buttons */
.prev,
.next {
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    padding: 16px;
    margin-top: -22px;
    color: #000;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
}

/* Position the "next button" to the right */
.next {
    right: 0;
    border-radius: 3px 0 0 3px;
}

/* Caption text */
.text {
    color: #fff;
    background-color: #201E20;
    font-size: 15px;
    padding: 8px 12px;
    position: absolute;
    bottom: -1px;
    width: 100%;
    text-align: center;
}

/* Number text (1/3 etc) */
.numbertext {
    color: #fff;
    font-size: 0.8rem;
    padding: 8px 12px;
    position: absolute;
    top: 0;
}

/* The dots/bullets/indicators */
.dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

.dot:hover {
    background-color: #717171;
}

/* Fading animation */
.fade {
    animation-name: fade;
    animation-duration: 1.5s;
}

@keyframes fade {
    from {
        opacity: .4
    }

    to {
        opacity: 1
    }
}

/* place tips */
.highlight {
    background-color: #f0f0f0;
    /* Light grey background */
    padding: 20px 0;
    border: 2px solid white;
}

.container {
    width: 80%;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: space-between;
    /* If you want to stack them on smaller screens */
    flex-wrap: wrap;
}

.content_text {
    flex: 1;
    padding: 20px;
    text-align: left;
    /* Left-aligned text */
}

.content_text h2 {
    text-align: center;
    font-weight: bold;
}

.content_photo {
    flex: 1;
    padding: 20px;
    /* Center the photo */
    text-align: center;
    /* Ensures the image doesn't spill out of the container */
    overflow: hidden;
    /* Smooth transition for hover effect */
    transition: transform 0.3s ease;
}
/* ... */

